--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "mkdocs-material" %}
-{% set version = "4.5.0" %}
+{% set version = "5.1.6" %}
 
 package:
   name: "{{ name|lower }}"
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: e0ccb48f21e671acc2f25e37ff1ea7aba0bcfe799393a7c687a97e07f9cb8528
+  sha256: a50180157d0fb539022f8476e3220e45934610fc1d61f54efa6fe266681cb202
 
 build:
   number: 0
@@ -20,9 +20,11 @@ requirements:
     - python >3
     - setuptools
   run:
-    - mkdocs >=1
-    - pygments >=2.2
-    - pymdown-extensions >=4.11
+    - mkdocs >=1.1
+    - pygments >=2.4
+    - markdown >=3.2
+    - pymdown-extensions >=7.0
+    - mkdocs-material-extensions>=1.0b1
     - python >3
     - setuptools
 
